--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
             android:id="@+id/username_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/login_placeholder" />
+            android:hint="@string/login_placeholder"
+            android:inputType="text"/>
         <EditText
             android:id="@+id/password_edit_text"
             android:layout_width="match_parent"
