--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp">
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:paddingTop="16dp"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
+        android:paddingBottom="32dp">
         <EditText
             android:id="@+id/register_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/register_email"
-            android:inputType="text"
+            android:inputType="textWebEmailAddress"
             android:maxLines="1"/>
         <EditText
             android:id="@+id/register_firstname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/register_first_name"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:maxLines="1"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/register_last_name"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:maxLines="1"/>
         <EditText
             android:id="@+id/register_password"
@@ -45,4 +45,4 @@
             android:text="@string/register_button"
             android:textColor="@color/white"/>
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
