--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/whiteSmoke">
     <include
     layout="@layout/toolbar_main"
     android:layout_width="match_parent"
@@ -34,6 +35,7 @@
                 android:inputType="textCapSentences"
                 android:maxLines="1"/>
             <EditText
+                android:id="@+id/register_lastname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/register_last_name"
@@ -44,6 +46,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/register_password"
+                android:inputType="textPassword"
+                android:maxLines="1"/>
+            <EditText
+                android:id="@+id/register_password_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/register_password_confirm"
                 android:inputType="textPassword"
                 android:maxLines="1"
                 android:layout_marginBottom="20dp"/>
