--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,28 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_home"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <include
+    android:layout_height="match_parent"
+    tools:context="com.rentables.testcenter.HomeActivity">
 
+
+    <include
+        android:id="@+id/toolbar_main"
         layout="@layout/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        />
 
-        android:layout_alignParentStart="true"/>
 
-    <TextView
+
+    <fragment android:name="com.rentables.testcenter.HomeFragment"
+        android:id="@+id/fragment_place"
+        android:layout_weight="0"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <!-- <TextView
+        android:layout_below="@id/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Hello World!"
-        />
-
-    <include
-        layout="@layout/toolbar_navigate"
+        android:textSize="32sp"
+        /> -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
-</RelativeLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="bottom">
+        <include
+            android:id="@+id/toolbar_navigate"
+            layout="@layout/toolbar_navigate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"/>
+    </LinearLayout>
+</LinearLayout>
