--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rentables_toolbar"
+    android:id="@+id/toolbar_main"
 
     android:layout_width="match_parent"
     android:layout_height="56dp"
@@ -9,3 +9,5 @@
     android:elevation="4dp"
     android:theme="@style/ActionBarTheme"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+
