--- a/app/src/main/res/layout/toolbar_navigate.xml
+++ b/app/src/main/res/layout/toolbar_navigate.xml
@@ -1,39 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigate_toolbar"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/toolbar_navigate"
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:background="?attr/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/ActionBarTheme"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    tools:context="com.rentables.testcenter.HomeActivity">
+
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="horizontal"
         android:layout_gravity="center"
         android:gravity="center">
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
+                android:text="HOME"
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="20"
+                android:onClick="selectFrag"
                 android:id="@+id/button1"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
 
+            <Button
+                android:text="BTN2"
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="20"
+                android:onClick="selectFrag"
                 android:id="@+id/button2"/>
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
+                android:text="BROWSE"
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="20"
+                android:onClick="selectFrag"
                 android:id="@+id/button3"/>
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:text="MY POSTS"
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="20"
+                android:onClick="selectFrag"
+                android:id="@+id/button4"/>
+            <Button
+                android:text="BTN5"
+                android:layout_width="0dip"
+                android:layout_height="fill_parent"
+                android:layout_weight="20"
+                android:onClick="selectFrag"
+                android:id="@+id/button5"/>
 
-                android:id="@+id/button4" />
     </LinearLayout>
-
 </android.support.v7.widget.Toolbar>
