--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.rentables.testcenter.HomeActivity">
+
+
 
     <item
         android:id="@+id/overflow_settings_option"
@@ -10,5 +14,9 @@
     <item
         android:id="@+id/overflow_account_option"
         android:title="@string/overflow_account_string"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/overflow_logout_option"
+        android:title="Logout"
         app:showAsAction="never" />
 </menu>
