--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/login_placeholder"
-                android:inputType="text"/>
+                android:inputType="textWebEmailAddress"/>
             <EditText
                 android:id="@+id/password_edit_text"
                 android:layout_width="match_parent"
