--- a/app/src/main/res/layout/toolbar_navigate.xml
+++ b/app/src/main/res/layout/toolbar_navigate.xml
@@ -2,62 +2,54 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:id="@+id/toolbar_navigate"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
     android:elevation="4dp"
     android:theme="@style/ActionBarTheme"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     tools:context="com.rentables.testcenter.HomeActivity">
-
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center"
         android:gravity="center">
             <ImageButton
-                android:backgroundTint="@color/colorPrimaryDark"
                 android:src="@drawable/ic_home_white_48dp"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="20"
                 android:onClick="selectFrag"
                 android:id="@+id/button1"/>
             <Button
-                android:backgroundTint="@color/colorPrimaryDark"
                 android:text="BTN2"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="20"
                 android:onClick="selectFrag"
                 android:id="@+id/button2"/>
             <ImageButton
-                android:backgroundTint="@color/colorPrimaryDark"
                 android:src="@drawable/ic_search_white_48dp"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="20"
                 android:onClick="selectFrag"
                 android:id="@+id/button3"/>
             <ImageButton
-                android:backgroundTint="@color/colorPrimaryDark"
                 android:src="@drawable/ic_list_white_48dp"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="20"
                 android:onClick="selectFrag"
                 android:id="@+id/button4"/>
             <Button
-                android:backgroundTint="@color/colorPrimaryDark"
                 android:text="BTN5"
-                android:layout_width="0dip"
-                android:layout_height="fill_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="20"
                 android:onClick="selectFrag"
                 android:id="@+id/button5"/>
-
     </LinearLayout>
 </android.support.v7.widget.Toolbar>
