--- a/app/src/main/res/layout/fragment_myposts.xml
+++ b/app/src/main/res/layout/fragment_myposts.xml
@@ -19,6 +19,8 @@
         android:text="CREATE POST"
         android:textColor="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="selectFrag"/>
+
 
 </LinearLayout>
